Fixes for JDK 11.